# A2T

./: .env.example  .gitignore  A2T_System_Architecture.md  README.md  pyproject.toml  requirements.txt
backend/: alembic.ini  config.py  database.py  main.py  models.py  pipeline.py  postprocessor.py  preprocessor.py  schemas.py  transcriber.py  verify_setup.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_jobs.py
frontend/: global.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: export-panel.tsx  job-history.tsx  processing-view.tsx  stats-bar.tsx  transcript-view.tsx  upload-zone.tsx
frontend/src/lib/: api.ts  types.ts  websocket.ts
