[project]
name = "voxscript-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "python-multipart>=0.0.9",
    "ruff>=0.3.0",
    "soundfile>=0.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]
